--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,15 @@
 <resources>
+    <!-- margins -->
+    <dimen name="main_margin">5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <!-- toolbar dimensions -->
+    <dimen name="main_top_toolbar">100dp</dimen>
+    <dimen name="main_bottom_toolbar">70dp</dimen>
+    <dimen name="main_filter_toolbar">70dp</dimen>
+    <!-- text dimensions -->
+    <dimen name="main_title_text">30dp</dimen>
+    <!-- button dimensions -->
+    <dimen name="btn_main_height">60dp</dimen>
+    <!-- button padding (for good touch size) -->
+    <dimen name="btn_padding">15dp</dimen>
 </resources>
