--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,6 +29,7 @@
             android:layout_weight="3"
             android:gravity="center"
             android:text="@string/title_activity_main"
+            android:textColor="@color/black"
             android:textSize="@dimen/main_title_text"/>
     </LinearLayout>
     <!-- filter post buttons -->
