--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,7 @@
     </style>
 
     <style name="Theme.SoundPaletteUI" parent="Base.Theme.SoundPaletteUI" />
+
+    <style name="Theme.FixedButton" parent="Theme.AppCompat.Light.NoActionBar"/>
+
 </resources>
