--- a/app/src/main/res/values/post_images.xml
+++ b/app/src/main/res/values/post_images.xml
@@ -188,7 +188,7 @@
         <item>image03.png</item>
         <item>image20.png</item>
         <item>image24.png</item>
-        <item>image06.ong</item>
+        <item>image06.png</item>
         <item>image04.png</item>
         <item>image01.png</item>
     </string-array>
@@ -222,7 +222,7 @@
         <item>image10.png</item>
         <item>image17.png</item>
         <item>image05.png</item>
-        <item>image06.ong</item>
+        <item>image06.png</item>
         <item>image11.png</item>
         <item>image08.png</item>
     </string-array>
@@ -242,7 +242,7 @@
         <item>image15.png</item>
         <item>image24.png</item>
         <item>image29.png</item>
-        <item>image06.ong</item>
+        <item>image06.png</item>
         <item>image16.png</item>
         <item>image19.png</item>
         <item>image12.png</item>
@@ -263,7 +263,7 @@
 
 
     <string-array name="allrandom4_images">
-        <item>image06.ong</item>
+        <item>image06.png</item>
         <item>image02.png</item>
         <item>image18.png</item>
         <item>image25.png</item>
@@ -325,7 +325,7 @@
         <item>image28.png</item>
         <item>image04.png</item>
         <item>image10.png</item>
-        <item>image06.ong</item>
+        <item>image06.png</item>
         <item>image12.png</item>
     </string-array>
 
