--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,75 +1,94 @@
-<?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground"
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".Activities.LoginRegister.LoginActivity">
+
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Activities.LoginRegister.LoginActivity"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center"
+        android:paddingTop="125dp"
+        android:paddingStart="125dp"
+        android:paddingEnd="125dp"
+        android:paddingBottom="0dp"
+        android:src="@drawable/baseline_music_note_48"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:layout_gravity="center"
+        android:text="SoundPalette"
+        android:textSize="42sp"
+        android:textColor="@color/white"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="50dp"/>
+
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:hint="username"
+        android:inputType="text"
+        android:maxLength="25"
+        android:padding="10dp"
+        android:textSize="20sp"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:hint="password"
+        android:inputType="text"
+        android:maxLength="25"
+        android:padding="10dp"
+        android:textSize="20sp"
+        android:layout_marginBottom="32dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="10dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Username"
-                android:layout_gravity="start"
-                android:paddingStart="5dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:paddingBottom="70dp"
+        android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:hint="Enter username"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Password"
-                android:layout_gravity="start"
-                android:paddingStart="5dp"/>
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:hint="Enter Password"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="10dp">
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
             android:id="@+id/register_button"
             android:text="Register"
-            android:layout_gravity="start"
-            android:textColor="#FFFFFFFF"
-            android:backgroundTint="#e36414"/>
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorOnSurface"/>
+
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
             android:id="@+id/login_button"
             android:text="Login"
-            android:layout_gravity="end"
-            android:textColor="#FFFFFFFF"
-            android:backgroundTint="#e36414"/>
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorOnSurface"/>
     </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
 
+</LinearLayout>
