--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -24,7 +24,7 @@
         android:id="@+id/title_center"
         android:layout_width="wrap_content"
         android:layout_height="65sp"
-        android:text="@string/app_name"
+        android:text="SoundPalette"
         android:textSize="30sp"
         android:textAlignment="center"
         android:paddingStart="10dp"
