--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -62,11 +62,9 @@
             android:scaleType="centerCrop" />
 
         <!-- Action buttons: Like, Comment, Save -->
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:orientation="horizontal"
-            android:gravity="left"
             android:background="@color/colorBackground">
 
                 <!-- Like Button -->
@@ -76,9 +74,10 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/post_fav_empty_24"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
-                    android:padding="5dp"
+                    android:paddingStart="10dp"
                     android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"/>
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true" />
 
                 <!-- Comment Button -->
                 <ImageButton
@@ -88,7 +87,9 @@
                     android:src="@drawable/post_comment_24"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:padding="5dp"
-                    android:layout_marginEnd="5dp"/>
+                    android:layout_marginEnd="5dp"
+                    android:layout_toEndOf="@id/postLikeButton"
+                    android:layout_centerVertical="true" />
 
                 <!-- Save Button -->
                 <ImageButton
@@ -96,9 +97,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/post_saved_empty_24"
+                    android:layout_alignParentEnd="true"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
-                    android:padding="5dp"/>
+                    android:padding="5dp"
+                    android:paddingEnd="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_centerVertical="true" />
 
-        </LinearLayout>
+        </RelativeLayout>
+
 
 </LinearLayout>
