--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,15 +10,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@color/colorBackground"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:layout_weight="10"
             android:padding="10dp"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:background="@drawable/rounded_corners"
             android:backgroundTint="@color/white">
 
