--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,12 +15,27 @@
         android:backgroundTint="@color/colorBackgroundLight"
         android:orientation="horizontal">
 
-        <ImageView
+        <FrameLayout
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:id="@+id/profile_picture"
-            android:src="@drawable/baseline_person_100">
-        </ImageView>
+            android:layout_gravity="center">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/profile_picture"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:src="@drawable/baseline_person_100"
+                app:shapeAppearanceOverlay="@style/CircleImageView" />
+
+            <ImageButton
+                android:id="@+id/edit_profile_button"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="bottom|end"
+                android:background="@drawable/icon_edit_24"
+                android:padding="5dp"/>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
