--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,18 +9,20 @@
     <!-- text dimensions -->
     <dimen name="main_title_text">40dp</dimen>
     <dimen name="edit_text">40dp</dimen>
-    <dimen name="row_text">25dp</dimen>
+    <dimen name="row_text">16dp</dimen>
     <dimen name="edit_text_margin">10dp</dimen>
     <!-- button dimensions -->
     <dimen name="btn_main_height">60dp</dimen>
-    <dimen name="btn_text_size">20dp</dimen>
+    <dimen name="btn_main_width">120dp</dimen>
+    <dimen name="btn_text_size">18dp</dimen>
     <!-- padding  -->
     <dimen name="btn_padding">15dp</dimen>
     <dimen name="row_text_padding">5dp</dimen>
     <dimen name="register_fields">20dp</dimen>
 
     <!-- registration page -->
-    <dimen name="spinner_height">45dp</dimen>
+    <dimen name="spinner_height">50dp</dimen>
     <dimen name="profile_pic">100dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_area_height">100dp</dimen>
 </resources>
